--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Santiago Cardenas Jimenez
 logo: Imagen actualizada Marzo 2022.jpg
 description: Portafolio
 show_downloads: true
-theme: jekyll.theme-minimal
+theme: minima
