--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Santiago Cardenas Jimenez
-logo: /assets/img/Imagen actualizada Marzo 2022.jpg
+logo: /assets/img/cropped_image.png
 description: +57 320 454 1728 | santicar1809@gmail.com
 show_downloads: true
-theme: minima
+theme: minimal
