--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Santiago Cardenas Jimenez
 logo: /assets/img/cropped_image.png
 description: +57 320 454 1728 | santicar1809@gmail.com
 show_downloads: true
-theme: minimal
+theme: jekyll-theme-minimal
