--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Santiago Cardenas Jimenez
-logo: /assets/img/cropped_image.png
+logo: /assets/img/Imagen actualizada Enero 2025_small-modified.png
 description: +57 320 454 1728 | santicar1809@gmail.com
 show_downloads: true
 theme: jekyll-theme-minimal
